--- a/examples/link/css/link.css
+++ b/examples/link/css/link.css
@@ -13,7 +13,14 @@
     cursor: pointer;
 }
 
-[role="link"].w3c {
+[role="link"].w3c1 {
+  display: block;
+  content: url('../images/w3c-logo.png');
+  width:153px;
+  height:104px; 
+}
+
+[role="link"].w3c2 {
   display: block;
   background-repeat: no-repeat;
   background-image: url('../images/w3c-logo.png');
