--- a/examples/checkbox/css/checkbox-3.css
+++ b/examples/checkbox/css/checkbox-3.css
@@ -1,17 +1,21 @@
-div[role=checkbox] {
+.group div[role=checkbox] {
    margin: 0;
    padding: 0;    
    border: 2px transparent solid;
+   margin-bottom: .5em;
+   margin-top: .5em;
 }
-
-div[role=checkbox]:active {
-  background-color: #bbb;
-}
-  
-div[role=checkbox]:hover {
+.group label{
+   display: block;
+   border: thin transparent solid;
+   margin-left: 18px;
+}  
+.group div[role=checkbox]:hover,
+label:hover {
    border-color: #777;
 }
 
-div[role=checkbox].focus {
+.group div[role=checkbox].focus,
+label.focus {
    border-color: black;
 }
